added task post, put and delete endpoints
